--- a/packages/mdxjs-react/src/Heading.module.css
+++ b/packages/mdxjs-react/src/Heading.module.css
@@ -1,19 +1,24 @@
 .heading {
+    align-items: center;
+    display: flex;
     position: relative;
 }
 
 .heading .link {
+    display: flex;
     margin-left: -1.25rem;
-    padding-right: 0.25rem;
+    padding: 0.125rem;
     position: absolute;
-    visibility: hidden;
-
-    svg {
-        height: 1.2rem;
-        width: 1.2rem;
-    }
+    opacity: 0;
+    transition: opacity 0.3s;
 }
 
-.heading:hover .link {
-    visibility: visible;
+.heading .link svg {
+    height: 1rem;
+    width: 1rem;
+}
+
+.heading:hover .link,
+.heading .link:focus {
+    opacity: 1;
 }
